<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryWhoosh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvChangeApiKey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="18dp"
        app:endIconMode="clear_text"
        app:hintEnabled="true"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/hint_input_api"
        app:errorTextColor="@color/color_btn_whoosh"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toStartOf="@+id/btnChangeApiKey"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editChangeApiKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnChangeApiKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/color_btn_whoosh"
        android:layout_marginEnd="32dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/txt_btn_change_api_key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvChangeApiKey"
        app:layout_constraintTop_toTopOf="@+id/tvChangeApiKey"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnClearAllStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:backgroundTint="@color/color_btn_whoosh"
        android:text="@string/txt_btn_clear_all"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangeApiKey" />

    <Button
        android:id="@+id/btnShowCurrentApiKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/color_btn_whoosh"
        android:text="@string/txt_btn_show_current_key"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClearAllStatus" />

</androidx.constraintlayout.widget.ConstraintLayout>