<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:background="@color/colorPrimaryWhoosh">

        <ImageView
            android:id="@+id/btnCancel"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_baseline_cancel_48"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivScooterPoster"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:src="@drawable/ic_kick_scooter_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.12"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvPrevNameScooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/tv_status"
            android:text="@string/txt_prev_name_scooter"
            app:layout_constraintTop_toBottomOf="@id/ivScooterPoster"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="28dp"
            android:layout_marginStart="12dp"/>

        <TextView
            android:id="@+id/tvNameScooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/tv_status"
            android:layout_marginStart="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvPrevNameScooter"
            app:layout_constraintStart_toEndOf="@+id/tvPrevNameScooter"
            app:layout_constraintTop_toTopOf="@+id/tvPrevNameScooter"
            tools:text="P456" />

        <TextView
            android:id="@+id/tvPrevStatusScooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txt_prev_status_scooter"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/tv_status"
            app:layout_constraintStart_toStartOf="@+id/tvPrevNameScooter"
            app:layout_constraintTop_toBottomOf="@id/tvPrevNameScooter" />

        <TextView
            android:id="@+id/tvStatusScooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/tv_status"
            app:layout_constraintBottom_toBottomOf="@+id/tvPrevStatusScooter"
            app:layout_constraintStart_toStartOf="@+id/tvNameScooter"
            app:layout_constraintTop_toTopOf="@+id/tvPrevStatusScooter"
            tools:text="BATTERY_LOW" />



        <TextView
            android:id="@+id/tvCommentsScooter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="8dp"
            android:maxLines="15"
            tools:text="@string/text_holder_comments"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStatusScooter" />

        <TextView
            android:id="@+id/tvDateTimeScanned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:textSize="9sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvPrevNameScooter"
            tools:text="16.08.2020 20:20" />

        <Button
            android:id="@+id/btnDeleteStatus"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:textSize="12sp"
            android:backgroundTint="@color/color_btn_whoosh"
            android:layout_marginTop="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCommentsScooter"/>

        <ImageView
            android:id="@+id/ivCopyStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_baseline_copy_36"
            app:layout_constraintBottom_toTopOf="@+id/ivShareStatus"
            app:layout_constraintTop_toBottomOf="@+id/ivShareStatus"
            app:layout_constraintEnd_toStartOf="@+id/ivShareStatus"/>

        <ImageView
            android:id="@+id/ivShareStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_share_36"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btnDeleteStatus"
            app:layout_constraintTop_toTopOf="@+id/btnDeleteStatus"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>